--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,141 +1,155 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.w3.org/1999/xhtml"
-lang="pt-br">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br">
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Shop Homepage</title>
+<title>Shop Homepage</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="css/shop-homepage.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Loja Spring</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="#">Loja Spring</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active"><a class="nav-link" href="#">Home
+							<span class="sr-only">(current)</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Services</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-  <!-- Page Content -->
-  <div class="container">
+	<!-- Page Content -->
+	<div class="container">
 
-    <div class="row">
+		<div class="row">
 
-      <div class="col-lg-2">
+			<div class="col-lg-2">
 
-        <h3 class="my-4">Categorias</h3>
-        <div class="list-group">
-          <a href="#" class="list-group-i">Category 1<hr class="solid"/></a>
-          <a href="#" class="list-group-i">Category 2<hr class="solid"/></a>
-          <a href="#" class="list-group-i">Category 3<hr class="solid"/></a>
-        </div>
+				<h3 class="my-4">Categorias</h3>
+				<div class="list-group">
+					<a href="#" class="list-group-i">Category 1
+						<hr class="solid"></hr>
+					</a> <a href="#" class="list-group-i">Category 2
+						<hr class="solid"></hr>
+					</a> <a href="#" class="list-group-i">Category 3
+						<hr class="solid"></hr>
+					</a>
+				</div>
 
-      </div>
-      <!-- /.col-lg-3 -->
+			</div>
+			<!-- /.col-lg-3 -->
 
-      <div class="col-lg-10">
+			<div class="col-lg-10">
 
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+				<div id="carouselExampleIndicators" class="carousel slide my-4"
+					data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0"
+							class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img class="d-block img-fluid" src="http://placehold.it/900x350"
+								alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block img-fluid" src="http://placehold.it/900x350"
+								alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block img-fluid" src="http://placehold.it/900x350"
+								alt="Third slide">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators"
+						role="button" data-slide="prev"> <span
+						class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+						class="sr-only">Previous</span>
+					</a> <a class="carousel-control-next" href="#carouselExampleIndicators"
+						role="button" data-slide="next"> <span
+						class="carousel-control-next-icon" aria-hidden="true"></span> <span
+						class="sr-only">Next</span>
+					</a>
+				</div>
 
-        <div class="row">
+				<div class="row">
 
-          <div class="col-lg-4 col-md-6 mb-4" th:each="produto : ${listaProdutos}">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top img-fluid" th:src="@{/produtos/mostrarImagem/{imagem}(imagem=${produto.nomeImagem})}" 
+					<div class="col-lg-4 col-md-6 mb-4"
+						th:each="produto : ${listaProdutos}">
+						<div class="card h-100">
+							<a href="#"><img class="card-img-top img-fluid"
+								th:src="@{/produtos/mostrarImagem/{imagem}(imagem=${produto.nomeImagem})}"
 								alt="imagem produto"></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#" ><span th:text="${produto.nome}"></span></a>
-                </h4>
-                <h5 class="valor-identificador">R$ <span th:text="${produto.valorVenda}"></span></h5>
-                <p class="card-text"><span th:text="${produto.descricao}">></span></p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
+							<div class="card-body">
+								<h4 class="card-title">
+									<a href="#"><span th:text="${produto.nome}"></span></a>
+								</h4>
+								<h5 class="valor-identificador text-right">
+									R$ <span th:text="${produto.valorVenda}" data-mask="#.00"></span>
+								</h5>
+								<p class="card-text">
+									<span th:text="${produto.descricao}">></span>
+								</p>
+							</div>
+							<div class="card-footer">
+								<small class="text-muted">&#9733; &#9733; &#9733;
+									&#9733; &#9734;</small>
+							</div>
+						</div>
+					</div>
 
 
-        </div>
-        <!-- /.row -->
+				</div>
+				<!-- /.row -->
 
-      </div>
-      <!-- /.col-lg-9 -->
+			</div>
+			<!-- /.col-lg-9 -->
 
-    </div>
-    <!-- /.row -->
+		</div>
+		<!-- /.row -->
 
-  </div>
-  <!-- /.container -->
+	</div>
+	<!-- /.container -->
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; Your
+				Website 2020</p>
+		</div>
+		<!-- /.container -->
+	</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
