--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br"
+	layout:decorate="~{clientes/fragments/layout}">>
 
 <head>
 
@@ -18,32 +19,7 @@
 </head>
 
 <body>
-
-	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-		<div class="container">
-			<a class="navbar-brand" href="#">Loja Spring</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarResponsive" aria-controls="navbarResponsive"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
-							<span class="sr-only">(current)</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	<!-- Page Content -->
+	<section class="layout-content" layout:fragment="corpo">
 	<div class="container">
 
 		<div class="row">
@@ -135,16 +111,12 @@
 
 
 				</div>
-				<!-- /.row -->
 
 			</div>
-			<!-- /.col-lg-9 -->
 
 		</div>
-		<!-- /.row -->
 
-	</div>
-	<!-- /.container -->
+	</section>
 
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
